Add pid to log file names